# gadgetron-sms

./: .cproject  .gitignore  .project  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  cmake_install.cmake  cpack_options.cmake  install_manifest.txt
gadgets/epi_liryc/: CMakeLists.txt  EPICorrMultiBandCMRRGadget.cpp  EPICorrMultiBandCMRRGadget.h  EPICorrMultiBandSiemensGadget.cpp  EPICorrMultiBandSiemensGadget.h  EPICorrMultiBandSiemensSimpleGadget.cpp  EPICorrMultiBandSiemensSimpleGadget.h  EPICorrMultiBandSimpleGadget.cpp  EPICorrMultiBandSimpleGadget.h  EPICorrStudyGadget.cpp  EPICorrStudyGadget.h  EPIReconXGadget.cpp  EPIReconXStudyGadget.cpp  EPIReconXStudyGadget.h  IFFTXGadget.cpp  IFFTXGadget.h  ReverseLineGadget.cpp  ReverseLineGadget.h  gadgetron_epi_liryc_export.h
gadgets/examplelib/: CMakeLists.txt  CuNDArrayTohoNDArrayGadget.cpp  CuNDArrayTohoNDArrayGadget.h  EmptyRemoveROOversamplingGadget.cpp  EmptyRemoveROOversamplingGadget.h  GenericChangeSizeTo7Gadget.cpp  GenericChangeSizeTo7Gadget.h  GenericChangeSizeTo8Gadget.cpp  GenericChangeSizeTo8Gadget.h  GenericCheckSizeDataRefSBGadget.cpp  GenericCheckSizeDataRefSBGadget.h  GenericCheckSizeGadget.cpp  GenericCheckSizeGadget.h  GenericCheckSizeSimpleGadget.cpp  GenericCheckSizeSimpleGadget.h  GenericConcateneGadget.cpp  GenericConcateneGadget.h  GenericDecoupeGadget.cpp  GenericDecoupeGadget.h  GenericEmptyTestGadget.cpp  GenericEmptyTestGadget.h  GenericMBReconDataBase.cpp  GenericMBReconDataBase.h  GenericReconBase.cpp  GenericReconBase.h  GenericReconCartesianMultibandPostGadget.cpp  GenericReconCartesianMultibandPostGadget.h  GenericReconCartesianMultibandPrepGadget.cpp  GenericReconCartesianMultibandPrepGadget.h  GenericReconCartesianMultibandSliceGrappaGadget.cpp  GenericReconCartesianMultibandSliceGrappaGadget.h  GenericReconGadget.h  SegmentedAquisitionGadget.cpp  SegmentedAquisitionGadget.h  ThresholdGadget.cpp  ThresholdGadget.h  franck_CMakeLists.txt  gadgetron_examplelib_export.h  hoNDArrayToCuNDArrayGadget.cpp  hoNDArrayToCuNDArrayGadget.h
gadgets/examplelib/config/: Generic_Cartesian_Grappa_EPI_Cut_And_Combine.xml  Generic_Cartesian_Grappa_EPI_SMS_CMRR_Matlab_Franck.xml  Generic_Change_Size.xml  (+7 more)
gadgets/multiband/: ApplySliceOptimalPhaseShiftGadget.cpp  ApplySliceOptimalPhaseShiftGadget.h  ApplyWIPSliceOptimalPhaseShiftGadget.cpp  ApplyWIPSliceOptimalPhaseShiftGadget.h  BlipACSAndSliceCalibrationGadget.cpp  BlipACSAndSliceCalibrationGadget.h  BlipACSCalibrationGadget.cpp  BlipACSCalibrationGadget.h  BlipACSCalibrationSimpleGadget.cpp  BlipACSCalibrationSimpleGadget.h  CMakeLists.txt  CheckKillMultibandDataGadget.h  CheckMultibandDefoldingGadget.cpp  CheckWIPMultibandBeforeGadget.cpp  CheckWIPMultibandBeforeGadget.h  CheckWIPMultibandDefoldingGadget.cpp  CheckWIPMultibandDefoldingGadget.h  EmptyFlagsGadget.cpp  EmptyFlagsGadget.h  KillMultibandDataGadget.cpp  KillMultibandDataGadget.h  PseudoGenericMultibandRecoGadget.cpp  PseudoGenericMultibandRecoGadget.h  PseudoWIPGenericMultibandRecoGadget.cpp  PseudoWIPGenericMultibandRecoGadget.h  RemoveBlipGadget.cpp  RemoveBlipGadget.h  SMSKspaceGadget.cpp  SMSKspaceGadget.h  WriteLirycMultibandInformationGadget.cpp  WriteLirycMultibandInformationGadget.h  WriteLirycSliceCalibrationFlagsGadget.cpp  WriteLirycSliceCalibrationFlagsGadget.h  WriteMultibandInformationGadget.cpp  WriteMultibandInformationGadget.h  WriteSliceCalibrationFlagsGadget.cpp  WriteSliceCalibrationFlagsGadget.h  WriteWIPMultibandInformationGadget.cpp  WriteWIPMultibandInformationGadget.h  gadgetron_multiband_export.h
gadgets/sms_core/: .WriteSingleBandFlagsGadget.cpp.kate-swp  AcquisitionAccumulateTriggerSMSGadget.h  BucketToBufferSMSGadget.cpp  BucketToBufferSMSGadget.h  CMakeLists.txt  CheckImageGadget.cpp  CheckImageGadget.h  CuNDArrayReceiveMessage_BenoitGadget.cpp  CuNDArrayReceiveMessage_BenoitGadget.h  CuNDArraySendMessage_BenoitGadget.cpp  CuNDArraySendMessage_BenoitGadget.h  DisplayGadget.cpp  DisplayGadget.h  EmptyGadget.cpp  EmptyGadget.h  EmptyGadget_GPUBenoit.cpp  EmptyGadget_GPUBenoit.h  EmptyImageGadget.cpp  EmptyImageGadget.h  GadgetIsmrmrdReadWrite.h  GenericReconBase.cpp  GenericReconBase.h  GenericReconBase1of2.cpp  GenericReconBase1of2.h  GenericReconBase_gadget1of2.cpp  GenericReconBase_gadget1of2.h  GenericReconCartesianReceiveEpiMsgGadget.cpp  GenericReconCartesianReceiveEpiMsgGadget.h  GenericReconCartesianSliceGrappaGadget.cpp  GenericReconCartesianSliceGrappaGadget.h  GenericReconCartesianSliceGrappav0Gadget.cpp  GenericReconCartesianSliceGrappav0Gadget.h  GenericReconCartesianSliceGrappav1Gadget.cpp  GenericReconCartesianSliceGrappav1Gadget.h  GenericReconCartesianSliceGrappav3Gadget.cpp  GenericReconCartesianSliceGrappav3Gadget.h  GenericReconCartesianSliceGrappav3Gadget.h.autosave  GenericReconCartesianSliceGrappavgpuGadget.cpp  GenericReconCartesianSliceGrappavgpuGadget.h  GenericReconCheckSizeGadget.cpp  (+61 more)
gadgets/sms_depreciated/: AcquisitionAccumulateTriggerSMSGadget.cpp  AcquisitionAccumulateTriggerSMSGadget.h  BucketToBufferSMSGadget.h  CMakeLists.txt  GadgetIsmrmrdReadWrite.h  GenericReconBase.cpp  GenericReconBase.h  GenericReconCartesianSliceGrappav0Gadget.cpp  GenericReconCartesianSliceGrappav0Gadget.h  GenericReconCartesianSliceGrappav1Gadget.h  GenericReconGadget.h  GenericReconSMSBase.cpp  GenericReconSMSBase.h  GenericReconSMSPostv0Gadget.h  GenericReconSMSPrepv0Gadget.cpp  GenericReconSMSPrepv0Gadget.h  GenericReconSMSPrepv1Gadget.cpp  GenericReconSMSPrepv1Gadget.h  GenericReconSMSv0Base.h  gadgetron_sms_depreciated_export.h
gadgets/thermo_core/: CMakeLists.txt  CmrParametricMappingGadget.cpp  ExtractThermoIGadget.cpp  ExtractThermoIGadget.h  Makefile  SimpleThermoGadget.cpp  SimpleThermoGadget.h  ThermoMappingBase.cpp  ThermoMappingBase.h  ThermoMappingGadget.cpp  ThermoMappingGadget.h  ZeroFillingGPUGadget.cpp  ZeroFillingGPUGadget.h  ZeroFillingGPUPlusGadget.cpp  ZeroFillingGPUPlusGadget.h  ZeroFillingGadget.cpp  ZeroFillingGadget.h  cmake_install.cmake  gadgetron_thermocore_export.h  libgadgetron_thermocore.so.4.1
(+525 files in other folders)
